# bad-apple-flut

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  nohup.out  output.out
.github/workflows/: main.yml
benches/: pixel_to_string.rs
src/: args.rs  cache.rs  color.rs  compression.rs  config.rs  ffmpeg_cli.rs  frame.rs  lib.rs  main.rs  paths.rs  pixel.rs  protocol.rs
src/compression/: mod.rs
src/compression/v1/: mod.rs
src/compression/v2/: mod.rs
