[package]
name = "bad-apple-flut"
version = "1.0.0-alpha.1"
edition = "2021"
authors = ["peppidesu"]
description = "A video player for pixelflut written in Rust"
homepage = "https://github.com/peppidesu/bad-apple-flut"
repository = "https://github.com/peppidesu/bad-apple-flut"
license = "AGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.15", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
image = "0.24.8"
priority-queue = "2.0.3"
rayon = "1.8.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"

[dev-dependencies]
tempfile = "3.9.0"
test-case = "3.3.1"
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "pixel_to_string"
harness = false


