[package]
name = "bad-apple-flut"
version = "1.0.0"
edition = "2021"
authors = ["peppidesu"]
description = "A video player for pixelflut written in Rust"
homepage = "https://github.com/peppidesu/bad-apple-flut"
repository = "https://github.com/peppidesu/bad-apple-flut"
license = "AGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.15", features = ["derive"] }
clap-serde-derive = "0.2.1"
colored = "2.1.0"
crossterm = "0.27.0"
dirs = "5.0.1"
rayon = "1.8.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"

[dev-dependencies]
tempfile = "3.9.0"
test-case = "3.3.1"
criterion = "0.5.1"
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[package.metadata.aur]
depends = ["ffmpeg"]